--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,28 @@
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
 
+.navbar-link {
+  color: white !important; 
+  text-decoration: none !important; 
+  margin: 1rem 1rem;
+  padding-left: 1.5rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+
+  &.active {
+    color: #0275d8 !important;
+  }
+}
+
+
+.navbar-link:hover {
+  color: #0d1321 !important;
+  background-color: #f4f4f4;
+  width: 25%;
+  border-radius: 55px;
+  padding: 0.5rem;
+}
+
 /* Default CSS*/
 *{
   margin: 0;
@@ -36,6 +58,14 @@ h1,h2,h3, h4, h5, h6 {
 
 /* Banner */
 
+.banner{
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .tagline {
   font-weight: 700;
   letter-spacing: 0.9px;
@@ -43,6 +73,7 @@ h1,h2,h3, h4, h5, h6 {
   border: 2px double rgba(4, 93, 218, 0.5);
   border-radius: 1rem;
   font-size: 2rem;
+
   margin-bottom: 1.5rem;
   display: inline-block;
   box-shadow: 0px 0px 50px rgba(236, 236, 238, 0.8);;
@@ -90,7 +121,7 @@ h1,h2,h3, h4, h5, h6 {
 /*Skills*/
 
 .skills{
-  height: 95vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -102,9 +133,7 @@ h1,h2,h3, h4, h5, h6 {
   height: 500px;
   background-color: #f4f4f4;
   padding: 20px;
-  border-radius: 15px;
-  margin-bottom: 3rem;
- 
+  border-radius: 15px; 
 }
 
 .skills-title{
@@ -173,12 +202,30 @@ background:rgba(4, 93, 218, 0.5) !important;
 
 /*projects*/
 
+.project{
+height: 100vh;
+display: flex; 
+justify-content: center; 
+align-items: center;
+}
+
+.ProjectCard{
+  border: 2px solid #08266d !important;
+  box-shadow: 0px 0px 50px rgba(26, 5, 144, 0.5) ;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+
+}
+
 .project-container {
-   height: 600px;
+   max-height: 600px;
+   max-width: 600px;
    background-color: #f4f4f4;
    padding: 20px;
    border-radius: 15px;
-   margin-bottom: 3rem;
+   border: 2px solid #08266d;
+   margin: auto;
  }
 
  .project-title{
@@ -221,6 +268,13 @@ background:rgba(4, 93, 218, 0.5) !important;
 }
 
 /*Contact*/
+
+.contact {
+  height: 100vh;
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
 
 .SendEmail{
   box-shadow: 0px 0px 50px rgba(236, 236, 238, 0.8);
