--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+ }
 
 html{
   scroll-behavior: smooth;
@@ -59,11 +59,13 @@ h1,h2,h3, h4, h5, h6 {
 /* Banner */
 
 .banner{
-  height: 90vh;
+  width: 85vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: auto;
+  padding-top: 3rem;
 }
 
 .tagline {
@@ -73,7 +75,6 @@ h1,h2,h3, h4, h5, h6 {
   border: 2px double rgba(4, 93, 218, 0.5);
   border-radius: 1rem;
   font-size: 2rem;
-
   margin-bottom: 1.5rem;
   display: inline-block;
   box-shadow: 0px 0px 50px rgba(236, 236, 238, 0.8);;
@@ -121,18 +122,18 @@ h1,h2,h3, h4, h5, h6 {
 /*Skills*/
 
 .skills{
-  height: 90vh;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 3rem auto;
 }
 
 .skills-container {
  /* background-image: linear-gradient(62deg, #3a3d40 0%, #3a3d40 100%);*/
-  height: 500px;
+  width: 100%;
   background-color: #f4f4f4;
-  
   padding: 20px;
   border-radius: 15px; 
 }
@@ -204,10 +205,11 @@ background:rgba(4, 93, 218, 0.5) !important;
 /*projects*/
 
 .project{
-height: 100vh;
-display: flex; 
-justify-content: center; 
-align-items: center;
+  width: 60vw;
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  margin: 3rem auto;
 }
 
 .ProjectCard{
@@ -219,8 +221,8 @@ align-items: center;
 }
 
 .project-container {
-   max-height: 600px;
-   max-width: 600px;
+  
+   width: 100%;
    background-color: #f4f4f4;
    padding: 20px;
    border-radius: 15px;
@@ -270,13 +272,29 @@ align-items: center;
 /*Contact*/
 
 .contact {
-  height: 100vh;
+  width: 60vw;
   display: flex; 
   justify-content: center; 
   align-items: center;
+  margin: 3rem auto;
 }
 
 .SendEmail{
   box-shadow: 0px 0px 50px rgba(236, 236, 238, 0.8);
   border: 1px double rgba(4, 93, 218, 0.5);
+}
+
+/* Footer*/
+
+.footer{
+  width: 100vw;
+  background-color: #3a3d40;
+  color: white;
+  padding: 20px;
+  position: relative;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
