--- a/src/App.css
+++ b/src/App.css
@@ -347,6 +347,10 @@ background:rgba(4, 93, 218, 0.5) !important;
     width: 90vw;
   }
 
+  .ProjectCard{
+    width: 60vw;
+  }
+
   .project-title{
     font-size: 1.5rem;
   }
