--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 .navbar-gradient {
   /*background-image: linear-gradient(62deg, #45567d 0%, #0d1321 100%);*/
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+
 }
 
 .navbar-link {
@@ -21,9 +22,9 @@
 .navbar-link:hover {
   color: #0d1321 !important;
   background-color: #f4f4f4;
-  width: 25%;
+  width: 50%;
   border-radius: 55px;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 /* Default CSS*/
@@ -131,7 +132,6 @@ h1,h2,h3, h4, h5, h6 {
 }
 
 .skills-container {
- /* background-image: linear-gradient(62deg, #3a3d40 0%, #3a3d40 100%);*/
   width: 100%;
   background-color: #f4f4f4;
   padding: 20px;
@@ -276,7 +276,8 @@ background:rgba(4, 93, 218, 0.5) !important;
   display: flex; 
   justify-content: center; 
   align-items: center;
-  margin: 3rem auto;
+  margin: 1.5rem auto;
+
 }
 
 .SendEmail{
@@ -290,7 +291,7 @@ background:rgba(4, 93, 218, 0.5) !important;
   width: 100vw;
   background-color: #3a3d40;
   color: white;
-  padding: 20px;
+  
   position: relative;
   bottom: 0;
   display: flex;
@@ -298,6 +299,23 @@ background:rgba(4, 93, 218, 0.5) !important;
   justify-content: center;
   align-items: center;
 }
+
+/*adaptation mobile*/
+@media screen and (max-width: 768px) {
+  /*skils*/
+  .langages  {
+    flex-direction: column;
+    margin-bottom: 0.5rem;
+  }
+  /*Project*/
+  .ProjectCard{
+    width: 50vw !important;
+  }
+
+}
+
+
+
 
 /*adaptation mobile*/
 @media screen and (max-width: 480px) {
@@ -342,6 +360,26 @@ background:rgba(4, 93, 218, 0.5) !important;
 
   .langages  {
     flex-direction: column;
+    margin-bottom: 0.2rem;
+  }
+
+  .react-multi-carousel-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.5s ease;
+    padding: 0;
+  }
+
+  .slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 60px 10px 0;
+    transition: transform 0.3s ease;
+    color: rgba(4, 93, 218, 0.5);
+    width: 38%; 
   }
 
   /* Projects */
